# slambook

ch7/: CMakeLists.txt  pose_estimation_3d2d.cpp
ch7/cmake_modules/: FindCSparse.cmake  FindG2O.cmake
project/0.4/: CMakeLists.txt  VisualOdometry.files  VisualOdometry.includes
project/0.4/cmake_modules/: FindSophus.cmake
project/0.4/config/: default.yaml
project/0.4/include/myslam/: frame.h  visual_odometry.h
project/0.4/src/: frame.cpp  visual_odometry.cpp
project/0.4/test/: run_vo.cpp
